// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`wire format golden: anthropic > signed thinking passback with thinking enabled 1`] = `
{
  "max_tokens": 6144,
  "messages": [
    {
      "content": "Solve the puzzle.",
      "role": "user",
    },
    {
      "content": [
        {
          "signature": "sig-abc",
          "thinking": "signed reasoning",
          "type": "thinking",
        },
        {
          "id": "tu-2",
          "input": {
            "path": "puzzle.md",
          },
          "name": "read_file",
          "type": "tool_use",
        },
      ],
      "role": "assistant",
    },
    {
      "content": [
        {
          "content": "clue text",
          "is_error": undefined,
          "tool_use_id": "tu-2",
          "type": "tool_result",
        },
      ],
      "role": "user",
    },
  ],
  "model": "claude-sonnet-4-5",
  "system": "SYSTEM PROMPT",
  "temperature": 1,
  "thinking": {
    "budget_tokens": 2048,
    "type": "enabled",
  },
  "tool_choice": {
    "type": "auto",
  },
  "tools": [
    {
      "description": "Read a file from the vault",
      "input_schema": {
        "properties": {
          "path": {
            "description": "Vault-relative path",
            "type": "string",
          },
        },
        "required": [
          "path",
        ],
        "type": "object",
      },
      "name": "read_file",
    },
    {
      "description": "Present the final result",
      "input_schema": {
        "properties": {
          "result": {
            "type": "string",
          },
        },
        "required": [
          "result",
        ],
        "type": "object",
      },
      "name": "attempt_completion",
    },
  ],
}
`;

exports[`wire format golden: anthropic > text-only request 1`] = `
{
  "max_tokens": 4096,
  "messages": [
    {
      "content": "Summarize the vault structure.",
      "role": "user",
    },
    {
      "content": "It has three top folders.",
      "role": "assistant",
    },
    {
      "content": "Go deeper on the second one.",
      "role": "user",
    },
  ],
  "model": "claude-sonnet-4-5",
  "system": "SYSTEM PROMPT",
  "temperature": 0.2,
  "tool_choice": undefined,
  "tools": undefined,
}
`;

exports[`wire format golden: anthropic > tools with prompt caching markers 1`] = `
{
  "max_tokens": 4096,
  "messages": [
    {
      "content": "Read the readme.",
      "role": "user",
    },
    {
      "content": [
        {
          "text": "Reading it now.",
          "type": "text",
        },
        {
          "id": "tu-1",
          "input": {
            "path": "README.md",
          },
          "name": "read_file",
          "type": "tool_use",
        },
      ],
      "role": "assistant",
    },
    {
      "content": [
        {
          "cache_control": {
            "type": "ephemeral",
          },
          "content": "# Readme
Hello world",
          "is_error": undefined,
          "tool_use_id": "tu-1",
          "type": "tool_result",
        },
      ],
      "role": "user",
    },
  ],
  "model": "claude-sonnet-4-5",
  "system": [
    {
      "cache_control": {
        "type": "ephemeral",
      },
      "text": "SYSTEM PROMPT",
      "type": "text",
    },
  ],
  "temperature": 0.2,
  "tool_choice": {
    "type": "auto",
  },
  "tools": [
    {
      "description": "Read a file from the vault",
      "input_schema": {
        "properties": {
          "path": {
            "description": "Vault-relative path",
            "type": "string",
          },
        },
        "required": [
          "path",
        ],
        "type": "object",
      },
      "name": "read_file",
    },
    {
      "cache_control": {
        "type": "ephemeral",
      },
      "description": "Present the final result",
      "input_schema": {
        "properties": {
          "result": {
            "type": "string",
          },
        },
        "required": [
          "result",
        ],
        "type": "object",
      },
      "name": "attempt_completion",
    },
  ],
}
`;

exports[`wire format golden: anthropic > vision blocks 1`] = `
{
  "max_tokens": 4096,
  "messages": [
    {
      "content": [
        {
          "text": "What is in this image?",
          "type": "text",
        },
        {
          "source": {
            "data": "aWNvbg==",
            "media_type": "image/png",
            "type": "base64",
          },
          "type": "image",
        },
      ],
      "role": "user",
    },
  ],
  "model": "claude-sonnet-4-5",
  "system": "SYSTEM PROMPT",
  "temperature": 0.2,
  "tool_choice": undefined,
  "tools": undefined,
}
`;

exports[`wire format golden: openai-shape > gpt-5 drops temperature and uses max_completion_tokens 1`] = `
{
  "max_completion_tokens": 4096,
  "max_tokens": undefined,
  "messages": [
    {
      "content": "SYSTEM PROMPT",
      "role": "system",
    },
    {
      "content": "Summarize the vault structure.",
      "role": "user",
    },
    {
      "content": "It has three top folders.",
      "role": "assistant",
    },
    {
      "content": "Go deeper on the second one.",
      "role": "user",
    },
  ],
  "model": "gpt-5",
  "stream": true,
  "stream_options": {
    "include_usage": true,
  },
  "temperature": undefined,
  "tools": undefined,
}
`;

exports[`wire format golden: openai-shape > text-only request 1`] = `
{
  "max_completion_tokens": 4096,
  "max_tokens": undefined,
  "messages": [
    {
      "content": "SYSTEM PROMPT",
      "role": "system",
    },
    {
      "content": "Summarize the vault structure.",
      "role": "user",
    },
    {
      "content": "It has three top folders.",
      "role": "assistant",
    },
    {
      "content": "Go deeper on the second one.",
      "role": "user",
    },
  ],
  "model": "gpt-4o",
  "stream": true,
  "stream_options": {
    "include_usage": true,
  },
  "temperature": 0.2,
  "tools": undefined,
}
`;

exports[`wire format golden: openai-shape > tool history round trip 1`] = `
{
  "max_completion_tokens": 4096,
  "max_tokens": undefined,
  "messages": [
    {
      "content": "SYSTEM PROMPT",
      "role": "system",
    },
    {
      "content": "Read the readme.",
      "role": "user",
    },
    {
      "content": "Reading it now.",
      "role": "assistant",
      "tool_calls": [
        {
          "function": {
            "arguments": "{"path":"README.md"}",
            "name": "read_file",
          },
          "id": "tu-1",
          "type": "function",
        },
      ],
    },
    {
      "content": "# Readme
Hello world",
      "role": "tool",
      "tool_call_id": "tu-1",
    },
  ],
  "model": "gpt-4o",
  "stream": true,
  "stream_options": {
    "include_usage": true,
  },
  "temperature": 0.2,
  "tool_choice": "auto",
  "tools": [
    {
      "function": {
        "description": "Read a file from the vault",
        "name": "read_file",
        "parameters": {
          "properties": {
            "path": {
              "description": "Vault-relative path",
              "type": "string",
            },
          },
          "required": [
            "path",
          ],
          "type": "object",
        },
      },
      "type": "function",
    },
    {
      "function": {
        "description": "Present the final result",
        "name": "attempt_completion",
        "parameters": {
          "properties": {
            "result": {
              "type": "string",
            },
          },
          "required": [
            "result",
          ],
          "type": "object",
        },
      },
      "type": "function",
    },
  ],
}
`;

exports[`wire format golden: openai-shape > vision blocks as image_url parts 1`] = `
{
  "max_completion_tokens": 4096,
  "max_tokens": undefined,
  "messages": [
    {
      "content": "SYSTEM PROMPT",
      "role": "system",
    },
    {
      "content": [
        {
          "text": "What is in this image?",
          "type": "text",
        },
        {
          "image_url": {
            "url": "data:image/png;base64,aWNvbg==",
          },
          "type": "image_url",
        },
      ],
      "role": "user",
    },
  ],
  "model": "gpt-4o",
  "stream": true,
  "stream_options": {
    "include_usage": true,
  },
  "temperature": 0.2,
  "tools": undefined,
}
`;
